--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,8 @@
         <img alt="rosefinch logo" id="logo" src="../assets/images/logo.svg">
     </nav>
     <main>
-        <!-- <rf-app></rf-app> -->
+        <a href="/abc">link</a>
+        <rf-app></rf-app>
     </main>
     <noscript>JavaScript is required.</noscript>
     <script defer src="./index.ts"></script>
