icons and icon element

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,7 @@
             --overlay-color: rgba(8, 12, 9, 0.9);
             --mask-color: rgba(8, 12, 9, 0.3);
             --font-color: var(--primary-color);
+            --inverse-font-color: var(--cream);
 
         }
         body {
