--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
             --dark-shadow-color: rgba(24, 67, 90, 0.3);
             --light-shadow-color: rgba(207, 230, 242, 0.3);
             --shadow-color: var(--dark-shadow-color);
+            --translucent-red: rgba(219, 189, 205, 0.3);
 
             --primary-shadow: 2px 4px 4px 2px var(--shadow-color);
             --secondary-shadow: 1px 2px 2px 1px var(--shadow-color);
@@ -30,7 +31,8 @@
             --button-border-radius: 50%;
 
             --font: 'Poppins', sans-serif;
-            --font-size: 1.35em;
+            --font-size: 1.35rem;
+            --small-font-size: calc(var(--font-size) / 1.5);
             --line-height: 1.65;
             --regular-weight: 400;
             --bold-weight: 800;
@@ -62,6 +64,7 @@
             --container-background-color: var(--white);
             --overlay-color: rgba(8, 12, 9, 0.9);
             --mask-color: rgba(8, 12, 9, 0.3);
+            --danger-container-color: var(--translucent-red);
             --font-color: var(--primary-color);
             --inverse-font-color: var(--cream);
             --focus-shadow: 0px 0px 0px 2px var(--medium-primary-color);
