add progress bar element

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,7 @@
             --danger-color: var(--red);
             --light-danger-color: var(--light-red);
             --success-color: var(--teal);
+            --light-success-color: var(--light-teal);
             --background-color: var(--cream);
             --container-background-color: var(--white);
             --overlay-color: rgba(8, 12, 9, 0.9);
