--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,19 @@
             background-image: url('../assets/images/background-lines.svg');
             background-size: cover;
             background-repeat: no-repeat;
+            scrollbar-width: thin;
+            scrollbar-color: var(--primary-color) var(--container-background-color);
+        }
+        ::-webkit-scrollbar {
+            width: 0.6rem;
+        }
+        ::-webkit-scrollbar-track {
+            background: var(--container-background-color);
+        }
+        ::-webkit-scrollbar-thumb {
+            background-color: var(--primary-color) ;
+            border-radius: var(--border-radius);
+            border: 3px solid var(--container-background-color);
         }
         nav {
             display: flex;
