--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
 </head>
 <body>
     <nav>
-        <img alt="rosefinch logo" id="logo" src="../assets/images/logo.svg">
+        <a href="/" title="Home"><img alt="rosefinch logo" id="logo" src="../assets/images/logo.svg"></a>
     </nav>
     <main>
         <rf-app></rf-app>
