--- a/src/index.html
+++ b/src/index.html
@@ -2,21 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="#91C7B1">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicons/favicon-16x16.png">
+    <link rel="manifest" href="../assets/favicons/site.webmanifest">
+    <link rel="mask-icon" href="../assets/favicons/safari-pinned-tab.svg" color="#703e58">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#703e58">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Use interactive genetic algorithms to compose short musical snippets.">
     <title>rosefinch</title>
     <base href="/">
     <style>
         :root {
-            --blue: hsl(201, 58%, 22%);
-            --red: hsl(328, 29%, 34%);
+            --blue: rgb(24, 66, 89);
+            --red: hsl(329, 29%, 34%);
             --teal: hsl(185, 84%, 38%);
             --medium-blue: hsl(201, 58%, 44%);
             --light-blue: hsl(201, 58%, 88%);
             --light-red: hsl(328, 29%, 80%);
             --light-teal: hsl(185, 84%, 80%);
             --cream: hsl(45, 20%, 96%);
-            --white: hsl(45, 20%, 99%);
+            --white: hsl(60, 20%, 99%);
             --black: hsl(135, 20%, 4%);
             --lighter-black: hsl(135, 20%, 7%);
             --dark-shadow-color: rgba(24, 67, 90, 0.3);
